--- a/app/src/main/res/layout/settings_page.xml
+++ b/app/src/main/res/layout/settings_page.xml
@@ -87,13 +87,15 @@
 
             <!-- Username and Email -->
             <LinearLayout
+                android:id="@+id/userInfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:layout_gravity="center"
-                android:layout_marginStart="16dp">
+                android:layout_marginStart="16dp"
+                android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/lblUsername"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="USERNAME"
@@ -102,6 +104,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/lblEmail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="EMAIL"
